[project]
name = "agenticaihack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.14.0",
    "google-genai>=1.36.0",
    "google-generativeai>=0.8.5",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.7",
    "poetry>=2.2.0",
]
